[dependencies]
clap = {default-features = false, features = [
  "color",
  "derive",
  "help",
  "std",
  "suggestions",
  "usage"
], version = "=4.5.0"}
owo-colors = "=4.0.0"

[package]
edition = "2021"
license = "MIT"
name = "empd"
version = "0.1.0"

[profile.release]
codegen-units = 1
lto = true
strip = true
